# plugins_saml

./: BUILD  MODULE.bazel  README.md  build.sbt  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  groups  project.config  saml_plugin_deps.lock.json  saml_third_party_runtime_jars.allowlist.txt
adfs/: README.md
keycloak/: README.md
okta/: README.md
simplesamlphp/: README.md
simplesamlphp/config/: authsources.php  config.php
simplesamlphp/metadata/: saml20-idp-hosted.php  saml20-sp-remote.php
src/main/java/com/googlesource/gerrit/plugins/saml/: AuthHeaders.java  AuthenticatedUser.java  HttpSerlvetBufferedStatusResponse.java  HttpServletBufferedStatusResponse.java  LibModuleData.java  Module.java  SamlClientFactory.java  SamlClientProvider.java  SamlConfig.java  SamlMembership.java  SamlWebFilter.java
src/main/java/com/googlesource/gerrit/plugins/saml/ldap/: LdapHelper.java  LdapQuery.java  LdapType.java  SearchScope.java
src/main/java/com/googlesource/gerrit/plugins/saml/pgm/: LibModuleDataDirUtil.java  Main.java  PluginDataDirUtil.java  SamlMetadataCreator.java
src/main/java/com/thesamet/gerrit/plugins/saml/: SamlConfig.java  SamlWebFilter.java
src/main/resources/Documentation/: build.md
src/test/java/com/googlesource/gerrit/plugins/saml/: SamlWebFilterIT.java
